# burn-mlx-benchmarks

./: .gitignore  README.md
bench/: compare.py  hw_info.py  mlx_bench.py  prompts.json  run_all.sh  setup.sh
bench/burn/: Cargo.toml
bench/burn/src/: main.rs
bench/swift/: Package.swift
bench/swift/Sources/: Bench.swift
