[package]
name = "burn-bench"
version = "0.1.0"
edition = "2021"

[features]
default = []
wgpu = ["qwen3-burn/wgpu", "burn/wgpu"]
metal = ["qwen3-burn/metal", "burn/metal"]
mlx = ["qwen3-burn/mlx", "dep:burn-mlx"]

[dependencies]
qwen3-burn = { git = "https://github.com/eidolons-ai/qwen3-burn.git", branch = "burn-mlx", default-features = false }
burn = { version = "0.20.0", default-features = false, features = ["std"] }
burn-mlx = { git = "https://github.com/eidolons-ai/burn-mlx.git", branch = "burn-0-20", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
half = { version = "2.4", features = ["serde"] }
